--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
   </head>
 
   <body>
+    <div id="universal">
+      <div id="formPage">
+        <div id="pocketBack" class="formPart">
+        </div>
+        <div id="pocketInner" class="formPart">
+        </div>
+        <div id="pocketFront" class="formPart">
+        </div>
+      </div>
+      <div id="resultPage">
+
+      </div>
+    </div>
   </body>
 </html>
