Form Page HTML and CSS

--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
         <div id="pocketBack" class="formPart">
         </div>
         <div id="pocketInner" class="formPart">
+          <div id="ticket">
+            <div id="cornerMark">
+              2016-2017第一学期
+            </div>
+            <div id="titleDiv">
+            </div>
+            <div id="nameLabelDiv">
+            </div>
+            <div id="nameInputDiv">
+            </div>
+          </div>
         </div>
         <div id="pocketFront" class="formPart">
         </div>
+
       </div>
       <div id="resultPage">
 
