Add pngs of the first page, and fix overflow for iPhone 5

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
               2016-2017第一学期
             </div>
             <div id="titleDiv">
+              <img src="images/bigtitle.png"></img>
             </div>
             <div id="nameLabelDiv">
             </div>
