--- a/index.html
+++ b/index.html
@@ -21,11 +21,35 @@
             </div>
             <div id="nameLabelDiv">
             </div>
-            <div id="nameInputDiv">
+            <div id="nameInputDiv" class="inputDiv">
             </div>
           </div>
         </div>
         <div id="pocketFront" class="formPart">
+          <div class="floatclear" style="height:320px"></div>
+          <div id="subjectLabelDiv" class="leftFloat">
+          </div>
+          <div id="subjectInputDiv" class="inputDiv leftFloat">
+          </div>
+          <div class="floatclear" style="height:12px"></div>
+          <div id="timeLabelDiv" class="leftFloat">
+          </div>
+          <div id="timeInputDiv" class="leftFloat">
+            <div id="y201" class="leftFloat"></div>
+            <div id="yearInput" class="leftFloat inputDiv"></div>
+            <div id="year" class="leftFloat"></div>
+            <div id="monthInput" class="leftFloat inputDiv"></div>
+            <div id="month" class="leftFloat"></div>
+            <div id="dayInput" class="leftFloat inputDiv"></div>
+            <div id="day" class="leftFloat"></div>
+          </div>
+          <div class="floatclear" style="height:12px"></div>
+          <div id="drawClicker" class="leftFloat"></div>
+          <div id="drawDiv">
+            <a href="#">
+              <img src="images/draw.png" />
+            </a>
+          </div>
         </div>
 
       </div>
