Debug Result Page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div id="universal">
-      <div id="formPage">
+      <div id="formPage" style="display:none">
         <div id="pocketBack" class="formPart">
         </div>
         <div id="pocketInner" class="formPart">
