Fix issue when input under another z-index div will be unreachable by using pointer-events: auto; and pointer-events: none;

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body onload="pageOnload()">
     <div id="universal">
-      <div id="formPage" style="display:none">
+      <div id="formPage" style="">
         <div id="pocketBack" class="formPart">
         </div>
         <div id="pocketInner" class="formPart">
@@ -22,6 +22,7 @@
             <div id="nameLabelDiv">
             </div>
             <div id="nameInputDiv" class="inputDiv">
+              <input id="nameValue" type="text" placeholder="haha"/>
             </div>
           </div>
         </div>
@@ -30,6 +31,7 @@
           <div id="subjectLabelDiv" class="leftFloat">
           </div>
           <div id="subjectInputDiv" class="inputDiv leftFloat">
+            <input id="subjectValue" type="text" placeholder="haha"/>
           </div>
           <div class="floatclear" style="height:12px"></div>
           <div id="timeLabelDiv" class="leftFloat">
