--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <div id="resultPage" style="display:none">
         <div id="infoDiv"></div>
         <div id="resultDiv">
+          <img id="result" src="" />
         </div>
         <div id="redrawClicker" class="leftFloat"></div>
         <div id="redrawDiv">
