--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
-    <title></title>
+    <title>期末佛脚签</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
@@ -14,7 +14,7 @@
         <div id="pocketInner" class="formPart">
           <div id="ticket">
             <div id="cornerMark">
-              2016-2017第一学期
+              <div></div>
             </div>
             <div id="titleDiv">
               <img src="images/bigtitle.png"></img>
@@ -22,7 +22,7 @@
             <div id="nameLabelDiv">
             </div>
             <div id="nameInputDiv" class="inputDiv">
-              <input id="nameValue" type="text" placeholder="李小明"/>
+              <input id="nameValue" type="text" maxlength="4" placeholder="1到4个字"/>
             </div>
           </div>
         </div>
@@ -39,13 +39,13 @@
           <div id="timeInputDiv" class="leftFloat">
             <div id="y201" class="leftFloat"></div>
             <div id="yearInput" class="leftFloat inputDiv">
-              <input id="yearValue" type="text" placeholder="7"/></div>
+              <input id="yearValue" type="number" min="6" max="7" step=“1” placeholder="7"/></div>
             <div id="year" class="leftFloat"></div>
             <div id="monthInput" class="leftFloat inputDiv">
-              <input id="monthValue" type="text" placeholder="1"/></div>
+              <input id="monthValue" type="number" min="1" max="12" step=“1” placeholder="1"/></div>
             <div id="month" class="leftFloat"></div>
             <div id="dayInput" class="leftFloat inputDiv">
-              <input id="dayValue" type="text" placeholder="4"/></div>
+              <input id="dayValue" type="number" min="1" max="31" step=“1” placeholder="4"/></div>
             <div id="day" class="leftFloat"></div>
           </div>
           <div class="floatclear" style="height:12px"></div>
